Fixing social icons in footer in dark mode

--- a/University/Admin assets/CSS/build-uhi-main-2.css
+++ b/University/Admin assets/CSS/build-uhi-main-2.css
@@ -1068,6 +1068,7 @@ main .plus-image img {
     text-indent: -9999px;
     height: 30px;
     width: 30px;
+    color-scheme: only light;
 }
 
 .footer .flexwrap.socialdesk .social li,
